--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -17,7 +17,8 @@ parameters:
     type: string
     description: Network used by the server
     default: Internal_Network
- 
+   metadata:
+    type: json
 resources:
   server:
     type: OS::Nova::Server
