--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -27,6 +27,7 @@ resources:
       image: {get_param: image}
       key_name: {get_param: key_name}
       networks: [{network: {get_param: network} }]
+      metadata: {get_param: metadata}
  
 outputs:
   server_ip:
