--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -13,12 +13,15 @@ parameters:
     type: string
     description: flavor used by the servers
     default: s1.large
+  user_data:
+    type: string
+    description: Server user_data
+  metadata:
+    type: json
   network:
     type: string
     description: Network used by the server
     default: Internal_Network
-   metadata:
-    type: json
 resources:
   server:
     type: OS::Nova::Server
@@ -26,8 +29,10 @@ resources:
       flavor: {get_param: flavor}
       image: {get_param: image}
       key_name: {get_param: key_name}
-      networks: [{network: {get_param: network} }]
       metadata: {get_param: metadata}
+      user_data: {get_param: user_data}
+      user_data_format: RAW
+      networks: [{network: {get_param: network} }]
  
 outputs:
   server_ip:
