added subnet parameter

--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -25,6 +25,9 @@ parameters:
     type: string
     description: Network used by the server
     default: Internal_Network
+  subnet:
+    type: string
+    descipriont: Subnet used by the server
 resources:
   server:
     type: OS::Nova::Server
