--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -27,7 +27,8 @@ parameters:
     default: Internal_Network
   subnet:
     type: string
-    descipriont: Subnet used by the server
+    description: Subnet used by the server
+    
 resources:
   server:
     type: OS::Nova::Server
@@ -43,7 +44,7 @@ resources:
   member:
     type: OS::Neutron::LBaaS::PoolMember
     properties:
-      pool_id: {get_param: pool_id}
+      pool: {get_param: pool_id}
       address: {get_attr: [server, first_address]}
       protocol_port: 8080
       subnet: { get_param: subnet }
