--- a/srv_template.yaml
+++ b/srv_template.yaml
@@ -36,8 +36,8 @@ resources:
       rules:
       - remote_ip_prefix: 0.0.0.0/0
         protocol: tcp
-        port_range_min: { get_param: app_port }
-        port_range_max: { get_param: app_port }
+        port_range_min: 8080
+        port_range_max: 8080
   server:
     type: OS::Nova::Server
     properties:
