--- a/srv_with_lb_template.yaml
+++ b/srv_with_lb_template.yaml
@@ -16,9 +16,6 @@ parameters:
   pool_id:
     type: string
     description: Pool to contact
-  user_data:
-    type: string
-    description: Server user_data
   metadata:
     type: json
   network:
@@ -28,6 +25,9 @@ parameters:
   subnet:
     type: string
     description: Subnet used by the server
+  app_port:
+    type: number
+    description: application port number
     
 resources:
   sec_group:
@@ -36,8 +36,8 @@ resources:
       rules:
       - remote_ip_prefix: 0.0.0.0/0
         protocol: tcp
-        port_range_min: 8080
-        port_range_max: 8080
+        port_range_min: { get_param: app_port }
+        port_range_max: { get_param: app_port }
   server:
     type: OS::Nova::Server
     properties:
@@ -46,8 +46,6 @@ resources:
       key_name: {get_param: key_name}
       metadata: {get_param: metadata}
       security_groups: [{ get_resource: sec_group }]
-      user_data: {get_param: user_data}
-      user_data_format: RAW
       networks: [{network: {get_param: network} }]
   member:
     type: OS::Neutron::LBaaS::PoolMember
