--- a/autoscaling_with_lb.yaml
+++ b/autoscaling_with_lb.yaml
@@ -10,7 +10,7 @@ parameters:
   my_accesskey:
     type: string
     description: Name of an existing key-pair
-    default: "naim_key"
+    default: "cloud_key"
     constraints:
       - custom_constraint: nova.keypair
   my_image:
@@ -22,13 +22,13 @@ parameters:
   my_network:
     type: string
     description: Neutron Network
-    default: "NAIM-WEB"
+    default: "network_1"
     constraints:
       - custom_constraint: neutron.network
   my_subnet:
     type: string
     description: Neutron SUB-Network
-    default: "NAIM_WEB"
+    default: "subnet_1"
   my_zone:
     type: string
     description: Availability Zone
@@ -47,7 +47,7 @@ resources:
       max_size: 5
       min_size: 1
       resource:
-        type: http://192.168.91.109:8000/srv_template.yaml
+        type: https://raw.githubusercontent.com/jacobbaek/HOT/master/srv_with_lb_template.yaml
         properties:
           metadata: {"metering.stack": {get_param: "OS::stack_id"}}
           pool_id: { get_resource: pool }
