--- a/srv_with_lb_template.yaml
+++ b/srv_with_lb_template.yaml
@@ -28,6 +28,9 @@ parameters:
   app_port:
     type: number
     description: application port number
+  instance_name:
+    type: string
+    description: instance name
     
 resources:
   sec_group:
@@ -47,6 +50,7 @@ resources:
       metadata: {get_param: metadata}
       security_groups: [{ get_resource: sec_group }]
       networks: [{network: {get_param: network} }]
+      name: {get_param: instance_name}
   member:
     type: OS::Neutron::LBaaS::PoolMember
     properties:
