--- a/srv_with_lb_template.yaml
+++ b/srv_with_lb_template.yaml
@@ -50,7 +50,7 @@ resources:
       metadata: {get_param: metadata}
       security_groups: [{ get_resource: sec_group }]
       networks: [{network: {get_param: network} }]
-      name: {get_param: instance_name}_%index%
+      name: {get_param: instance_name}
   member:
     type: OS::Neutron::LBaaS::PoolMember
     properties:
