--- a/autoscaling_with_lb.yaml
+++ b/autoscaling_with_lb.yaml
@@ -43,9 +43,9 @@ resources:
     type: OS::Heat::AutoScalingGroup
     properties:
       cooldown: 60
-      desired_capacity: 1
+      desired_capacity: 2
       max_size: 5
-      min_size: 1
+      min_size: 2
       resource:
         type: https://raw.githubusercontent.com/jacobbaek/HOT/master/srv_with_lb_template.yaml
         properties:
@@ -57,6 +57,7 @@ resources:
           subnet: { get_param: my_subnet }
           image: { get_param: my_image }
           app_port: { get_param: app_port }
+          instance_name: autoscaling_vm_%index%
   monitor:
     type: OS::Neutron::LBaaS::HealthMonitor
     properties:
