--- a/autoscaling_with_lb.yaml
+++ b/autoscaling_with_lb.yaml
@@ -138,3 +138,23 @@ outputs:
   LB-URL-VIP:
     value: {get_attr: [lb, vip_address]}
     description: VIP for our Load Balancer
+  ceilometer_query:
+    value:
+      str_replace:
+        template: >
+          ceilometer statistics -m cpu_util
+          -q metadata.user_metadata.stack=$stackval -p 600 -a avg
+        params:
+          $stackval: { get_param: "OS::stack_id" }
+    description: >
+      This is a Ceilometer query for statistics on the SURVEIL_users meter
+      Samples about OS::Nova::Server instances in this stack.  The -q
+      parameter selects Samples according to the subject's metadata.
+      When a VM's metadata includes an item of the form metering.X=Y,
+      the corresponding Ceilometer resource has a metadata item of the
+      form user_metadata.X=Y and samples about resources so tagged can
+      be queried with a Ceilometer query term of the form
+      metadata.user_metadata.X=Y.  In this case the nested stacks give
+      their VMs metadata that is passed as a nested stack parameter,
+      and this stack passes a metadata of the form metering.stack=Y,
+      where Y is this stack's ID.
